--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
         <h2>Get In Touch</h2>
         <h3>Guidance.</h3>
         <p>If you need any kind of help related to Cricket or Web Design & Development.</p>
+        <div class="contact">
         <a class="btn" href="mailto:smakram986@gmail.com">CONTACT ME</a>
       </div>
     </div>
